# mtuci-NN

./: #1 ResNet.ipynb  .gitignore  faster_rcnn_lab.py  main_3.py  pyproject.toml
lab1/: Лабораторная_1_отчет.docx
lab2/: #2 ResNeXt.ipynb  Лабораторная_2_отчет.docx
lab3/: #3 Faster R-CNN.ipynb  done_3.py  lab3_faster_rcnn.py  test.ipynb  Лабораторная_3_отчет.docx
lab4/: #4 Mask R-CNN.ipynb  #4 Mask R-CNN_task.ipynb  4.py  test.py
lab5/: #5 YOLO.ipynb  5-yolo.ipynb  test.ipynb
